--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,1 +1,22 @@
-# Dockerfile for deployment...
+# Use a secure, updated base image
+FROM python:3.11-slim-bullseye
+
+# Disable bytecode generation & enable real-time output
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONUNBUFFERED=1
+
+# Set work directory
+WORKDIR /app
+
+# Install dependencies
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
+
+# Copy all backend code
+COPY . .
+
+# Expose port (for FastAPI)
+EXPOSE 8000
+
+# Start the FastAPI server
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
