--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "mock-server": "json-server --watch db.json --port 8000"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
@@ -17,9 +18,11 @@
     "@radix-ui/react-slot": "^1.2.2",
     "@radix-ui/react-switch": "^1.2.4",
     "@radix-ui/react-toast": "^1.2.13",
+    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "html2canvas": "^1.4.1",
+    "json-server": "^1.0.0-beta.3",
     "lucide-react": "^0.508.0",
     "next": "13.4.0",
     "react": "18.2.0",
@@ -31,6 +34,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
+    "msw": "^2.8.0",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.0.0"
