--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "mock-server": "json-server --watch db.json --port 8000"
+    "mock-server": "json-server --watch db.json --port 8000",
+    "prepare": "msw init public/ --save"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
@@ -33,10 +34,17 @@
     "zod": "^3.24.4"
   },
   "devDependencies": {
+    "@types/node": "^22.15.17",
+    "@types/react": "^19.1.3",
     "autoprefixer": "^10.4.14",
     "msw": "^2.8.0",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.0.0"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
